--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/coding_events
-spring.datasource.username=coding_events
-spring.datasource.password=Learn2code!
+# Database connection settings
+spring.datasource.url=jdbc:postgresql://${APP_DB_HOST}:${APP_DB_PORT}/${APP_DB_NAME}
+# spring.datasource.url=jdbc:mysql://localhost:3306/coding_events
+spring.datasource.username=${APP_DB_USER}
+# spring.datasource.username=coding_events
+spring.datasource.password=${APP_DB_PASS}
+# spring.datasource.password=Learn2Code!
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -11,7 +15,7 @@ spring.jpa.show-sql = false
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
 
-# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
+# Use spring.jpa.properties.* for Hibernate native properties (The prefix is
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
