--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # Database connection settings
-spring.datasource.url=jdbc:postgresql://${APP_DB_HOST}:${APP_DB_PORT}/${APP_DB_NAME}
-# spring.datasource.url=jdbc:mysql://localhost:3306/coding_events
-spring.datasource.username=${APP_DB_USER}
-# spring.datasource.username=coding_events
-spring.datasource.password=${APP_DB_PASS}
-# spring.datasource.password=Learn2Code!
+# spring.datasource.url=jdbc:postgresql://${APP_DB_HOST}:${APP_DB_PORT}/${APP_DB_NAME}
+spring.datasource.url=jdbc:mysql://localhost:3306/coding_events
+# spring.datasource.username=${APP_DB_USER}
+spring.datasource.username=coding_events
+# spring.datasource.password=${APP_DB_PASS}
+spring.datasource.password=Learn2Code!
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
